# 2048

./: CMakeLists.txt  README.md  resources.qrc
cmake/: CreateIcon.cmake  DeployMacOsX.cmake
qml/: Button.qml  Constants.js  DefeatScreen.qml  Game.qml  Gameboard.qml  MainWindow.qml  ScoreLabel.qml  Tile.qml  WinScreen.qml
res/: 2048.icns  2048.rc  desktop.in
sql/: configure.sql  tables.sql
src/: cell.cpp  cell.h  game.cpp  game.h  gameboard.cpp  gameboard.h  gameboardsize.cpp  gameboardsize.h  gamecontroller.cpp  gamecontroller.h  gamespec.cpp  gamespec.h  gamestate.h  logger.cpp  logger.h  loggerworker.cpp  loggerworker.h  main.cpp  movedirection.h  namespaces.h  storage.cpp  storage.h  storageconstants.h  storageworker.cpp  storageworker.h  tile.cpp  tile.h  tilespec.cpp  tilespec.h  turnspec.cpp  turnspec.h
